# explore_hdr_models

./: .gitignore  README.md  example_sbatch_script.sh  fmri_hemodyn.m  pyproject.toml  requirements.txt  run_search copy.py  run_search.py  run_search_gamma_model.py  run_search_on_nii_gamma_model.py  run_search_on_roi_gamma_model.py  run_simulated_search.py  run_simulated_search_jn.py  scratch.m  scratch.py  submit_from_config.py  submit_sbatch_fine_control.py  submit_sbatch_from_config.py  submit_sbatch_simulation.py
feeg_fmri_sync/: __init__.py  constants.py  data_processing.py  io.py  models.py  plotting.py  search.py  simulations.py  utils.py  vectorized_models.py
feeg_fmri_sync/submission/: example_search.ini  parse_config.py  run_search_on_nii_gamma_model.py  run_search_on_roi_gamma_model.py  sbatch_script_writer.py  script_writers.py  search_script_writer.py  submit_sbatch_from_config.py
matlab_references/: fast_fratio.m  scratch.mlx
notebooks/: Effect of Ideal Parameters Summary.ipynb  Effect of Step Size Analysis (step size = 0.01).ipynb
submission/: example_pbsubmit_script.sh  example_sbatch_script_roi.sh  example_search.ini  parse_config.py  sbatch_script_writer.py  script_writers.py  search_script_writer.py  submission_params_writer.py
tests/: helpers.py  test_io.py  test_models.py  test_plotting.py  test_utils.py
tests/data/: eeg.par  expected_downsampled_hdr.mat  expected_hdr.mat  expected_hdr_for_eeg.mat  hdr.py  simulated_fmri.mat
