[tool.poetry]
name = "feeg_fmri_sync"
version = "0.1.0"
description = "Find parameters for best fit fmri hemodynamic response model responding to eeg data"
authors = ["Sarah Guthrie <sguthrie@mgh.harvard.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
surfa = "^0.4.2"
matplotlib = "^3.7.0"
statsmodels = "^0.13.5"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
